objects/FinServ__UseStandardTrigger__mdt.object
<CustomObject>
    <description>Use standard trigger instead of packaged triggers.</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Standard trigger runs instead of packaged trigger.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__Object__c</fullName>
        <description>Objects currently available in Salesforce platform.</description>
        <label>Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__TriggerEvents__c</fullName>
        <description>Events currently available to run in Salesforce platform.</description>
        <label>Trigger Events</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Use Standard Trigger</label>
    <pluralLabel>Use Standard Triggers</pluralLabel>
</CustomObject>